--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,15 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet/less" href="{{ asset('css/siwapp.less') }}" type="text/css" media="screen" title="Siwapp Styles" charset="utf-8">
         {% block stylesheets %}{% endblock %}
+        <script type="text/javascript" charset="utf-8" src="{{ asset('js/less-1.1.3.min.js') }}"></script>
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
+        
+        <script type="text/javascript" charset="utf-8" src="{{ asset('js/jquery-1.6.4.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
