Kendo UI CSS files.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -8,4 +8,8 @@
 // Bootstrap Xtra patches
 @import "bootstrap-patches.less";
 
+// Kendo UI styles
+@import "/css/kendo.common.min.css";
+@import "/css/kendo.kendo.min.css";
+
 // Siwapp custom styles
