Kendo DatePicker sample.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -8,4 +8,13 @@
     <button class="btn primary icon share alternative">Share this invoice!</button>
   </p>
   
+  <p>
+    <input id="datepicker" />
+    <script type="text/javascript">
+    jQuery(function($){
+      $('#datepicker').kendoDatePicker();
+    });
+    </script>
+  </p>
+  
 {% endblock %}
