--- a/web/css/bootstrap-patches.less
+++ b/web/css/bootstrap-patches.less
@@ -31,7 +31,7 @@
             width: @iconWidth; 
             height: @iconHeight; 
             margin: 0 0.75em 0 -0.25em; 
-            background: url(/img/icons.png) 0 99px no-repeat;
+            background: url(Bootstrap/icons.png) 0 99px no-repeat;
         }
         
         &.right:before {
