Base layout: Header.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,7 @@
       <h1>
         <a href="{{ path('homepage') }}">
           <img src="{{ asset('img/logo.png') }}" alt="Siwapp" />
-          <span class="version"></span>
+          <span class="version">v.0.5-DEV</span>
         </a>
       </h1>
       
@@ -43,7 +43,7 @@
       
       <nav class="main">
         
-        <a id="create-button" href="{{ path('homepage') }}" class="btn primary icon add alternative">{% trans %}New Invoice{% endtrans %}</a>
+        <a href="{{ path('homepage') }}" class="btn primary icon add alternative">{% trans %}New Invoice{% endtrans %}</a>
         
         <ul class="tabs">
           <li class="active">
