--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -1,7 +1,3 @@
-/**
- * Siwapp styles
- */
-
 // Bootstrap
 @import "bootstrap.less";
 
@@ -12,4 +8,5 @@
 @import "/css/kendo.common.min.css";
 @import "/css/kendo.kendo.min.css";
 
-// Siwapp custom styles
+// Siwapp Layout common styles
+@import "siwapp.layout.less";
