Estimates base actions and some views.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -56,7 +56,7 @@
             <a href="{{ path('dashboard_index') }}">{% trans %}Recurring Invoices{% endtrans %}</a>
           </li>
           <li>
-            <a href="{{ path('dashboard_index') }}">{% trans %}Estimates{% endtrans %}</a>
+            <a href="{{ path('estimate_index') }}">{% trans %}Estimates{% endtrans %}</a>
           </li>
           <li>
             <a href="{{ path('dashboard_index') }}">{% trans %}Customers{% endtrans %}</a>
