--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/edit.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/edit.html.twig
@@ -1,4 +1,11 @@
-<form action="" method="post" {{ form_enctype(form) }}>
-    {{ form_widget(form) }}
-    <input type="submit" />
-</form>
+{% extends "::base.html.twig" %}
+
+{% block body %}
+  
+  <h1>Invoices</h1>
+  <form action="" method="post" {{ form_enctype(form) }}>
+      {{ form_widget(form) }}
+      <input type="submit" />
+  </form>
+  
+{% endblock %}
