--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/show.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/show.html.twig
@@ -1,1 +1,8 @@
-SHOW INVOICE
+{% extends "::base.html.twig" %}
+
+{% block body %}
+  
+  <h1>Invoices</h1>
+  <p>SHOW INVOICE</p>
+  
+{% endblock %}
