Recurring invoices basic actions and views.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -53,7 +53,7 @@
             <a href="{{ path('invoice_index') }}">{% trans %}Invoices{% endtrans %}</a>
           </li>
           <li>
-            <a href="{{ path('dashboard_index') }}">{% trans %}Recurring Invoices{% endtrans %}</a>
+            <a href="{{ path('recurring_index') }}">{% trans %}Recurring Invoices{% endtrans %}</a>
           </li>
           <li>
             <a href="{{ path('estimate_index') }}">{% trans %}Estimates{% endtrans %}</a>
