--- a/web/css/siwapp.layout.less
+++ b/web/css/siwapp.layout.less
@@ -110,6 +110,7 @@ li {
     .searchform {
         margin:0 @layoutPadding * -1 @layoutPadding * 1.5;
         padding:@layoutPadding;
+        border-bottom:1px solid @grayLighter;
         .box-shadow(0 4px 3px -2px rgba(0,0,0,.10));
     }
 }
