--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -8,5 +8,11 @@
 @import "/css/kendo.common.min.css";
 @import "/css/kendo.kendo.min.css";
 
+// Siwapp Variables
+@import "siwapp.variables.less";
+
 // Siwapp Layout common styles
 @import "siwapp.layout.less";
+
+// Siwapp Tables common styles
+@import "siwapp.tables.less";
