Reorganizing CSS files.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -1,18 +1,18 @@
 // Bootstrap
-@import "bootstrap.less";
+@import "bootstrap-files/bootstrap.less";
 
 // Bootstrap Xtra patches
-@import "bootstrap-patches.less";
+@import "bootstrap-files/bootstrap-patches.less";
 
 // Kendo UI styles
-@import "/css/kendo.common.min.css";
-@import "/css/kendo.kendo.min.css";
+@import "/css/kendo-files/kendo.common.min.css";
+@import "/css/kendo-files/kendo.kendo.min.css";
 
 // Siwapp Variables
-@import "siwapp.variables.less";
+@import "siwapp-files/siwapp.variables.less";
 
 // Siwapp Layout common styles
-@import "siwapp.layout.less";
+@import "siwapp-files/siwapp.layout.less";
 
 // Siwapp Tables common styles
-@import "siwapp.tables.less";
+@import "siwapp-files/siwapp.tables.less";
