--- a/web/css/siwapp/dashboard.less
+++ b/web/css/siwapp/dashboard.less
@@ -1,5 +1,4 @@
-@import "../variables.less";
-@import "../siwapp.variables.less";
+@import "../siwapp-files/siwapp.variables.less";
 
 //
 // Summary
