Moving the dashboard styles to bundle folder.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/src/Siwapp/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/DashboardBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block stylesheets %}
-<link rel="stylesheet/less" href="{{ asset('css/siwapp/dashboard.less') }}" type="text/css" media="screen" title="Dashboard Styles" charset="utf-8" />
+<link rel="stylesheet/less" href="{{ asset('css/bundle/dashboard.less') }}" type="text/css" media="screen" title="Dashboard Styles" charset="utf-8" />
 {% endblock %}
 
 {% block body %}
