--- a/web/css/siwapp-files/siwapp.variables.less
+++ b/web/css/siwapp-files/siwapp.variables.less
@@ -12,6 +12,7 @@
 //
 
 @siwappOrange:#d1441b;
+@orangeTableHover:#fdf1e0;
 
 // Closed Invoice Green
 @closedGreenBg:#90c754;
@@ -25,3 +26,8 @@
 @openedYellowBg:#f6df69;
 @openedYellowBd:#d3b549;
 @openedYellowTx:#987e42;
+
+// Draft Invoice Gray
+@draftGrayBg:#eeeeee;
+@draftGrayBd:#dcdcdc;
+@draftGrayTx:#a098a0;
