--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -8,8 +8,9 @@
 @import "/css/kendo-files/kendo.common.min.css";
 @import "/css/kendo-files/kendo.kendo.min.css";
 
-// Siwapp Variables
+// Siwapp Variables & Patterns
 @import "siwapp-files/siwapp.variables.less";
+@import "siwapp-files/siwapp.patterns.less";
 
 // Siwapp Layout common styles
 @import "siwapp-files/siwapp.layout.less";
