--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/payments.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/payments.html.twig
@@ -31,7 +31,7 @@
                 1000,00€
               </td>
               <td>
-                <a href="{{ path('invoice_payment_delete', { 'invoiceId': 1, 'paymentId': 1 }) }}" class="btn danger icon remove">{% trans %}Remove{% endtrans %}</a>
+                <a href="{{ path('invoice_payment_delete', { 'invoiceId': 1, 'paymentId': 1 }) }}" class="btn danger small">{% trans %}Remove{% endtrans %}</a>
               </td>
             </tr>
             <tr>
@@ -42,7 +42,7 @@
                 500,00€
               </td>
               <td>
-                <a href="{{ path('invoice_payment_delete', { 'invoiceId': 1, 'paymentId': 2 }) }}" class="btn danger icon remove">{% trans %}Remove{% endtrans %}</a>
+                <a href="{{ path('invoice_payment_delete', { 'invoiceId': 1, 'paymentId': 2 }) }}" class="btn danger small">{% trans %}Remove{% endtrans %}</a>
               </td>
             </tr>
           </tbody>
