--- a/web/css/siwapp-files/siwapp.patterns.less
+++ b/web/css/siwapp-files/siwapp.patterns.less
@@ -30,3 +30,14 @@
         border-color:@blue;
     }
 }
+
+//
+// Forms
+//
+
+form {
+    .buttons {
+        overflow:hidden;
+        text-align:right;
+    }
+}
