--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/payments.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/payments.html.twig
@@ -8,20 +8,18 @@
       
       <form action="{{ path('invoice_payment_add', { 'invoiceId': 1 }) }}" method="post">
         <table>
-          <colgroup>
-            <col class="check" style="width:20px;" />
-            <col class="description" />
-            <col class="amount" />
-          </colgroup>
           <thead>
             <tr>
               <th>
                 <input type="checkbox" name="all" />
               </th>
+              <th class="date">
+                {% trans %}Date{% endtrans %}
+              </th>
               <th>
                 {% trans %}Description{% endtrans %}
               </th>
-              <th>
+              <th class="currency">
                 {% trans %}Amount{% endtrans %}
               </th>
             </tr>
@@ -31,10 +29,13 @@
               <td>
                 <input type="checkbox" name="id[]" value="1" />
               </td>
+              <td class="date">
+                5/29/11
+              </td>
               <td>
                 First Payment
               </td>
-              <td>
+              <td class="currency">
                 1000,00€
               </td>
             </tr>
@@ -42,28 +43,34 @@
               <td>
                 <input type="checkbox" name="id[]" value="1" />
               </td>
+              <td class="date">
+                9/13/11
+              </td>
               <td>
                 Second Payment
               </td>
-              <td>
+              <td class="currency">
                 500,00€
               </td>
             </tr>
             <tr>
               <td></td>
-              <td>
-                <input type="text" placeholder="Description" name="description">
+              <td class="date">
+                <input type="text" placeholder="Date" name="date" />
               </td>
               <td>
-                <input type="text" placeholder="Amount" name="amount">
+                <input type="text" placeholder="Description" name="description" />
+              </td>
+              <td class="currency">
+                <input type="text" placeholder="Amount" name="amount" />
               </td>
             </tr>
           </tbody>
         </table>
         <div class="buttons">
-          <a href="{{ path('invoice_payment_delete', { 'invoiceId': 1 }) }}" class="btn danger icon alternative remove float-left">{% trans %}Remove selected{% endtrans %}</a>
-          <button type="button" class="btn secondary">{% trans %}Close{% endtrans %}</button>
-          <button type="submit" class="btn primary icon alternative add">{% trans %}Add Payment{% endtrans %}</button>
+          <a href="{{ path('invoice_payment_delete', { 'invoiceId': 1 }) }}" class="btn danger icon alternative trash float-left">{% trans %}Remove selected{% endtrans %}</a>
+          <button type="submit" class="btn success icon alternative add">{% trans %}Add Payment{% endtrans %}</button>
+          <button type="button" class="btn secondary">{% trans %}OK{% endtrans %}</button>
         </div>
       </form>
       
