--- a/web/css/siwapp-files/siwapp.patterns.less
+++ b/web/css/siwapp-files/siwapp.patterns.less
@@ -41,3 +41,28 @@ form {
         text-align:right;
     }
 }
+
+//
+// Payments Popover
+//
+
+.payments-popover {
+    form {
+        margin:0;
+    }
+    table {
+        .description {
+            width:300px;
+        }
+    }
+    input[name="date"] {
+        width:90px;
+    }
+    input[name="amount"] {
+        width:90px;
+    }
+    input[name="description"] {
+        width:268px;
+    }
+}
+
