--- a/web/css/siwapp-files/siwapp.tables.less
+++ b/web/css/siwapp-files/siwapp.tables.less
@@ -20,6 +20,27 @@ table {
             vertical-align:middle !important;
         }
     }
+    
+    td, th {
+        &.date {
+            width:100px;
+        }
+        &.status {
+            width:75px;
+            text-align:center;
+        }
+        &.currency {
+            width:100px;
+            text-align:right;
+        }
+        &.payments {
+            width:120px;
+            text-align:center;
+        }
+        &.number {
+            width:100px;
+        }
+    }
 }
 
 //
